# barracuda-simulation

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: docker-publish.yml
application/: Dockerfile  docker-compose.yml
catkin_ws/src/barracuda/barracuda_simulation/: package.xml
catkin_ws/src/barracuda/barracuda_simulation/launch/: robosub_world.launch
catkin_ws/src/barracuda/gate_description/: CMakeLists.txt  package.xml
catkin_ws/src/barracuda/gate_description/launch/: display.launch  gazebo.launch
catkin_ws/src/barracuda/gate_description/urdf/: gate.urdf
catkin_ws/src/barracuda_simulation/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/barracuda_simulation/launch/: robosub_world.launch
catkin_ws/src/channel_description/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/channel_description/launch/: display.launch  gazebo.launch
catkin_ws/src/channel_description/urdf/: channel.urdf
catkin_ws/src/gate_description/: package.xml
catkin_ws/src/gate_description/launch/: display.launch
catkin_ws/src/gate_description/meshes/: gate.dae
catkin_ws/src/pool_description/: CMakeLists.txt  package.xml
catkin_ws/src/pool_description/meshes/: pool.dae
catkin_ws/src/pool_description/urdf/: pool.urdf
worlds/: test
