<?xml version="1.0"?>
<package format="2">
  <name>channel_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for competition channel obstacle.
    Contains 3D models and launch files for robosub channel.
  </description>
  <maintainer email="jiangmy@usc.edu">USC RoboSub Team</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <export>
    <architecture_independent />
  </export>
</package>
