<?xml version="1.0"?>
<package format="2">
  <name>barracuda_simulation</name>
  <version>1.0.0</version>
  <description>
    Simulation package for Barracuda AUV including world environments and launch files
    for complete robosub scenarios with obstacles like gates.
  </description>

  <maintainer email="robosub@usc.edu">USC RoboSub Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>barracuda_description</exec_depend>
  <exec_depend>gate_description</exec_depend>
  <exec_depend>dave_worlds</exec_depend>
  <exec_depend>dave_nodes</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>uuv_gazebo_worlds</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
